[project]
name = "ljy-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "emoji>=2.14.1",
    "lttb>=0.3.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pyautogui>=0.9.54",
    "xlsxwriter>=3.2.3",
]
# 添加 UV 镜像源配置
[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
